Fix crash in signal change notification override

Manual overrides of automatically generated property change
notification signals can cause crashes.  They also don't work
properly in the situations where they don't crash.  This patch
ensures that it is now a compile error to attempt to override a
signal with a manual signal or slot.

Note that this includes signals defined in superclasses.

Task-number: QTBUG-26723
Task-number: QTBUG-26818
Change-Id: I4ecf448ce9de5d97526606126991e280debea2d6
Reviewed-by: Kent Hansen <kent.hansen@nokia.com>